--- a/style.css
+++ b/style.css
@@ -221,7 +221,7 @@ html,body{
 	width: 100%;
 	top: 0;
 	left: 0;
-	z-index: 50;
+	z-index: 9999;
 }
 .header:before{
 	content: '';
@@ -824,3 +824,67 @@ overflow: hidden;
 }
 
 }
+
+					/* ---------------Стили для блога-------------------------- */
+.header_blog {
+	background-color: red;
+	margin:2.5em auto 0;
+
+	max-width: 1200px;
+	
+}
+.header_blog_block{
+	position: relative;
+	
+
+	width: 100%;
+	padding: 0;
+	
+}
+.header_blog_img {
+	display: block;
+	
+	/* margin: 0 auto; */
+}
+.header_blog_text {
+	position: absolute;
+	max-width: 70%;
+	bottom:0;
+	right:0;
+	z-index: 99;
+	/* border: 5px solid rgb(251, 255, 0); */
+	width: 100%;
+	max-height: 45%;
+	padding: 7%;
+	background-color: rgba(209, 249, 185, 0.8);
+}
+ .header_blog_title {
+	
+	font-size: 2.5em;
+	font-weight: 700;
+}
+/*
+.wrapper_content_blog {
+	border: 5px solid rgb(0, 38, 255);	
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.content_blog {
+		max-width: 100%;
+		border: 5px solid rgb(7, 90, 28);
+}
+.articles {
+}
+.article {
+}
+.img_prev {
+}
+.article_text {
+}
+.article_title {
+}
+.article_prev {
+}
+.aside {
+	 border: 5px solid red;	 
+} */
