--- a/style.css
+++ b/style.css
@@ -400,7 +400,12 @@ overflow: hidden;
 	margin:50px auto;
 	
 }
+.wrapper__articles__img{
+	display: block;
+	max-width: 100%;
 
+	overflow: hidden;
+}
 
 .articles__element{
 	display: block;
@@ -422,9 +427,9 @@ overflow: hidden;
 }
 .articles__img{
 	display: block;
-	max-width: 100%;
-	overflow: hidden;
+	width: 100%;
 	margin: 10px 0px 0px 0px;
+	object-fit: cover;
 	
 }
 .articles__small{
@@ -479,7 +484,7 @@ overflow: hidden;
 	
 }
 .contacts{
-	padding: 55px 0;
+	padding: 55px 25px ;
 	font-weight: 700;
 	display: flex;
 	flex-wrap: wrap;
@@ -488,7 +493,12 @@ overflow: hidden;
 	margin: 0 auto;
 	justify-content: space-between;
 }
-
+.social img{
+	padding: 0 20px 20px 0;
+}
+.social span:last-child{
+	padding: 0;
+}
 .contacts__title,.social__title{
 	font-weight: 700;
 	padding: 40px 0 40px 0;
@@ -500,7 +510,7 @@ overflow: hidden;
 
 .contacts__tel{
 	max-width: 45%;
-	margin: 0 0.5em 0 0.5em ;
+	margin: 0 0.5em 0 0 ;
 	font-size: 2em;
 	display: flex;
 	flex-direction: column;
@@ -517,16 +527,16 @@ overflow: hidden;
 	border-radius:5px;
 	font-size: 105%;
 }
-.facebook{
+.facebook, .telegram{
 	/* text-replace: 0.8s; */
-	padding: 0 60px 0 0;
+	
 }
 
-.facebook  img, .telegram img{
+.facebook  img, .telegram img, .instagram img{
 	transition: 0.8s;
-
+	width: 110px;
 }
-.facebook img:hover, .telegram img:hover {
+.facebook img:hover, .telegram img:hover, .instagram img:hover {
 	transition: 0.8s;
 	transform: scale(1.3); 
 }
@@ -628,17 +638,256 @@ overflow: hidden;
 /* .footer__about__title {
 } */
 
+
+					/* ---------------Стили для блога-------------------------- */
+.wrapper__header__blog{
+	width: 100%;
+	background-color: red;
+}
+
+.header_blog {
+	margin:2.5em auto 0;
+	max-width: 1200px;
+}
+.header_blog_block{
+	position: relative;
+	
+
+	width: 100%;
+	padding: 0;
+	
+}
+.header_blog_img {
+	display: block;
+	max-width: 100%;
+}
+.header_blog_text {
+	position: absolute;
+	max-width: 70%;
+	bottom:0;
+	right:0;
+	z-index: 99;
+	
+	width: 100%;
+	max-height: 45%;
+	padding: 7%;
+	background-color: rgba(209, 249, 185, 0.8);
+}
+ .header_blog_title {
+	
+	font-size: 2.5em;
+	font-weight: 700;
+}
+.header__blog__link{
+	display: block;
+	transition: 0.5s;
+	color:rgb(0, 0, 0);
+	
+}
+.header__blog__link:hover{
+	transition: 0.7s;
+	transform: scale(1.1);
+	color: rgb(0, 46, 6);
+	
+}
+.wrapper_content_blog {
+	
+	max-width: 1200px;
+	margin: 0 auto;
+}
+.content_blog {
+		display: flex;
+		max-width: 100%;
+		
+	
+}
+.article__list {
+	max-width: 70%;
+
+	margin: 5em 1.5em 0 0;
+
+}
+.article:last-child {
+	margin-bottom: 0;
+}
+
+.article {
+	margin : 0 0 3em 0;
+	display: flex;
+	
+}	
+.article div:nth-child(1){
+	min-width: 35%;
+}
+.img__prev{
+	overflow: hidden;
+	position: relative;
+}
+.img__prev img{
+	max-width: 120%;
+	transition: 1s;
+	/* object-fit: cover; */
+	/* object-position: center; */
+	/* position: absolute;
+	top: 0;
+	left: 0; */
+
+	
+}
+.img__prev img:hover{
+	transition: 1s;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+	opacity: 0.95;
+	cursor: pointer;
+}
+.article_text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center ; 
+	padding: 0 0 0 1em;
+}
+.article_title {
+	transition: 0.5s;
+	color: #000;
+	margin: 0 0 0.2em 0 ;
+	font-weight: 700;
+	font-size: 1.7em;
+}
+.article_title:hover{
+	transition: 0.7s;
+	color: #33640b;
+}
+.article_prev {
+	margin-bottom: 15px;
+}
+
+.article_category,.article_label{
+	margin-bottom: 8px;
+}
+.category_link {
+}
+.article_label {
+	display: flex;
+	justify-content: start;
+	flex-wrap: wrap;
+	
+}
+.article__label-single  {
+	display: block;
+	margin: 0 2px;
+	color: rgb(21, 46, 0);
+	font-weight: 700;
+	padding: 2px 7px;
+	
+}
+
+.article__label-single:hover{
+	transition: 0.8s;
+	color:#fff;
+	background-color: rgb(41, 92, 0);
+	border-radius: 3px;
+}
+
+
+.aside{
+	max-width: 45%;
+	background-color: rgb(165, 165, 165);
+	height: 100%;
+
+}
+.aside__title {
+	text-align:center;
+	margin: 1.22em auto ;
+}
+.aside__title h2{
+	font-size: 2em;
+	/* font-weight: bold; */
+}
+.aside__list {
+	
+
+}
+.aside__list-link {
+	display: block;
+	transition: 0.5s;
+	/* margin: 1em 0 0 0 ; */
+	border-top: 1px solid #000;
+	padding: 1em;
+	font-size: 1.3em;
+	color: rgb(0, 0, 0);
+}
+
+.aside__list-link:hover{
+	transition: 0.9s;
+	background-color: rgb(41, 92, 0);
+	color: #fff;
+	
+}
+.aside__list-link:last-child{
+	border-bottom: 1px solid #000;
+	padding: 1em  ;
+}
+
+.aside__category, .aside__label{
+	margin:  0.7em;
+}
+.aside__label{
+
+}
+.header_single_img {
+	display: block;
+
+	max-width: 70%;
+}
+.article__single{
+
+}
+.article__title {
+	font-size: 3em;
+	font-weight: 700;
+	text-align: center;
+	margin: 0 0 0.8em 0;
+}
+.article__paragraph {
+	margin: 0.65em 0 0 0 ;
+	font-size: 1.3em;
+}
+
+.aside__single{
+	background-color: #fff;
+}
+.feed__form{
+	margin: 2em 0 2em  0 ;
+}
+
 @media (max-width:1200px){
-	.articles{
+	.articles, .contacts, .content_blog,.header__single{
 		padding: 0 15px;
 	}
+	
 	
 }
 @media (max-width:920px){
 	.header__link {
 		padding: 10px 5px;
 	}
-
+	.article{
+		display: block;
+		
+	}
+	.article div:nth-child(1){
+		max-height: 230px;
+		margin-bottom: 1em;
+	}
+	.article_text{
+		padding:0;
+	}
+	.img__prev{
+		overflow: hidden;
+	}
+	
+	
 	
 }
 @media (max-width:768px){
@@ -801,6 +1050,15 @@ overflow: hidden;
 		font-weight: 700;
 		padding: 30px 0 30px 0;
 	}
+	.content_blog{
+		display: block;
+	}
+	.header_single_img{
+		max-width: 100%;
+	}
+	.article__list, .aside{
+		max-width: 100%;
+	}
 	.footer__wrapper{
 		/* justify-content: start; */
 		padding: 0 auto;
@@ -852,223 +1110,3 @@ overflow: hidden;
 }
 
 }
-
-					/* ---------------Стили для блога-------------------------- */
-.wrapper__header__blog{
-	width: 100%;
-	background-color: red;
-}
-
-.header_blog {
-	margin:2.5em auto 0;
-	max-width: 1200px;
-}
-.header_blog_block{
-	position: relative;
-	
-
-	width: 100%;
-	padding: 0;
-	
-}
-.header_blog_img {
-	display: block;
-	max-width: 100%;
-}
-.header_blog_text {
-	position: absolute;
-	max-width: 70%;
-	bottom:0;
-	right:0;
-	z-index: 99;
-	
-	width: 100%;
-	max-height: 45%;
-	padding: 7%;
-	background-color: rgba(209, 249, 185, 0.8);
-}
- .header_blog_title {
-	
-	font-size: 2.5em;
-	font-weight: 700;
-}
-.header__blog__link{
-	display: block;
-	transition: 0.5s;
-	color:rgb(0, 0, 0);
-	
-}
-.header__blog__link:hover{
-	transition: 0.7s;
-	transform: scale(1.1);
-	color: rgb(0, 46, 6);
-	
-}
-.wrapper_content_blog {
-	
-	max-width: 1200px;
-	margin: 0 auto;
-}
-.content_blog {
-		display: flex;
-		max-width: 100%;
-		
-	
-}
-.article__list {
-	max-width: 70%;
-
-	margin: 5em 1.5em 0 0;
-
-}
-.article:last-child {
-	margin-bottom: 0;
-}
-
-.article {
-	margin : 0 0 3em 0;
-	display: flex;
-	
-}
-
-.img_prev {
-	width: 50%;
-
-}
-.img_prev img {
-	max-width: 100%;
-}
-.img__prev-link{
-	display: block;
-	overflow: hidden;
-
-}
-.img__prev-link img{
-	transition: 1s;
-}
-.img__prev-link img:hover{
-	transition: 1s;
-	-webkit-transform: scale(1.1);
-	transform: scale(1.1);
-	opacity: 0.95;
-}
-.article_text {
-	display: flex;
-	flex-direction: column;
-	justify-content: center ; 
-	padding: 0 0 0 1em;
-}
-.article_title {
-	transition: 0.5s;
-	color: #000;
-	margin: 0 0 0.2em 0 ;
-	font-weight: 700;
-	font-size: 1.7em;
-}
-.article_title:hover{
-	transition: 0.7s;
-	color: #33640b;
-}
-.article_prev {
-	margin-bottom: 15px;
-}
-
-.article_category,.article_label{
-	margin-bottom: 8px;
-}
-.category_link {
-}
-.article_label {
-	display: flex;
-	justify-content: start;
-	flex-wrap: wrap;
-	
-}
-.article__label-single  {
-	display: block;
-	margin: 0 2px;
-	color: rgb(21, 46, 0);
-	font-weight: 700;
-	padding: 2px 7px;
-	
-}
-
-.article__label-single:hover{
-	transition: 0.8s;
-	color:#fff;
-	background-color: rgb(41, 92, 0);
-	border-radius: 3px;
-}
-
-
-.aside{
-	width: 45%;
-	background-color: rgb(165, 165, 165);
-	height: 100%;
-
-}
-.aside__title {
-	text-align:center;
-	margin: 1.22em auto ;
-}
-.aside__title h2{
-	font-size: 2em;
-	/* font-weight: bold; */
-}
-.aside__list {
-	
-
-}
-.aside__list-link {
-	display: block;
-	transition: 0.5s;
-	/* margin: 1em 0 0 0 ; */
-	border-top: 1px solid #000;
-	padding: 1em;
-	font-size: 1.3em;
-	color: rgb(0, 0, 0);
-}
-
-.aside__list-link:hover{
-	transition: 0.9s;
-	background-color: rgb(41, 92, 0);
-	color: #fff;
-	font-weight: 700;
-}
-.aside__list-link:last-child{
-	border-bottom: 1px solid #000;
-	padding: 1em  ;
-}
-
-.aside__category, .aside__label{
-	margin:  0.7em;
-}
-.aside__label{
-
-}
-.header_single_img {
-	display: block;
-
-	max-width: 70%;
-}
-.article__single{
-
-}
-.article__title {
-	font-size: 3em;
-	font-weight: 700;
-	text-align: center;
-	margin: 0 0 0.8em 0;
-}
-.article__paragraph {
-	margin: 0.65em 0 0 0 ;
-	font-size: 1.3em;
-}
-
-.aside__single{
-	background-color: #fff;
-}
-.feed__form{
-	margin: 2em 0 2em  0 ;
-}
-
