--- a/style.css
+++ b/style.css
@@ -347,36 +347,52 @@ html,body{
 	color: white;
 	background:rgb(45, 97, 0);
 }
-.seed__one, .seed__one img, .seed__one span {
+.seed__one img, .seed__one span {
 	display: block;
 	text-align: center;
 	max-width: 300px;
 	
 
 }
+.seed__one{
+	max-width: 300px;
+	min-height: 280px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 0 0 15px 0;
+}
 .seed__one img{
 	border-radius:5px;
 	max-width: 300px;
+	
 }
 .seed__one span{
 	font-weight: 700;
 	font-size: 1.3em;
-	margin: 15px 0px 60px 0px;
+	/* margin: 15px 0 0  0 ; */
 	
 }
 
 .seed__link{
 	color: black;
+	display: block;
+	margin: 15px 0 ;
 }
 .wrapper__seed__img{
-
+max-width: 320px;
+max-height: 245px;
 overflow: hidden;
 
 }
-.seed__img{
+.seed__img, .wrapper__seed__img img{
 	transition: 0.9s;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
-.seed__img:hover{
+.seed__img:hover, .wrapper__seed__img img:hover{
 	transition: 0.9s;
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
@@ -456,14 +472,14 @@ overflow: hidden;
 	display: block;
 	margin: 0 0 15px 0;
 }
-.articles__link, .category_link {
+.articles__link, .category_link, .article_category a {
 	color:#fff;
 }
 .articles__link:hover{
 	font-size: 102%;
 	transition: 0.5s;
 }
-.articles__buttons,.category_link {
+.articles__buttons,.category_link , .article_category a{
 	display: inline-block;
 	padding: 5px 15px;
 	background:rgb(45, 97, 0);
@@ -472,7 +488,7 @@ overflow: hidden;
 	border-radius:3px;
 	margin: 15px 0 0 0;
 }
-.articles__buttons:hover,.category_link:hover{
+.articles__buttons:hover,.category_link:hover, .article_category a:hover{
 	background:rgb(21, 46, 0);
 	transition: 0.8s;
 	/* background-color:#33640b; */
@@ -553,7 +569,7 @@ overflow: hidden;
 	transform: scale(1.3); 
 }
 .contacts__form{
-	width: 45%;
+	width: 50%;
 	margin: 0 0 2em  0 ;
 	/* padding:43px 0 0 0; */
 
@@ -649,6 +665,21 @@ p label {
 	font-size: 1.4em;
 	margin: 0 0 20px 0;
 }
+.footer__seeds__title-link,
+.footer__articles__title-link{
+	display: block;
+	transition: 0.6s;
+	color: rgb(255, 255, 255);
+	padding: 5px 10px;
+	border-radius: 3px;
+	border-bottom: 1px solid rgb(255, 255, 255);
+}
+.footer__seeds__title-link:hover,
+.footer__articles__title-link:hover{
+	transition: 0.8s;
+	background-color: rgb(255, 255, 255);
+	color: #1B3307 ;
+}
 .footer__seeds, .footer__articles, .footer__about  {
 	margin: 0 15px ;
 }
@@ -668,6 +699,8 @@ p label {
 .header_blog {
 	margin:2.5em auto 0;
 	max-width: 1200px;
+	display: flex;
+	justify-content: start;
 }
 .header_blog_block{
 	position: relative;
@@ -781,7 +814,7 @@ p label {
 
 
 .single__content{
-	font-size: calc(14px + 16 * (100vw / 1200));;
+	font-size: calc(16px + 6 * (100vw / 1200));;
 
 	border: solid 2px red;
 	overflow: hidden;
@@ -792,8 +825,23 @@ p label {
 }
 .article_category,.article_label{
 	margin-bottom: 8px;
+
 }
-.category_link {
+
+.article_label a{
+	margin: 0 5px 0 0 ;
+}
+.article_category ul {
+	display: flex;
+	flex-wrap: wrap;
+}
+.article_category ul li {
+	margin:0 5px 0 0;
+	
+}
+.article_category ul li:last-child {
+	margin-right:0;
+
 }
 .article_label {
 	display: flex;
@@ -801,7 +849,7 @@ p label {
 	flex-wrap: wrap;
 	
 }
-.article__label-single  {
+.article__label-single , .article_label a {
 	display: block;
 	margin: 0 2px;
 	color: rgb(21, 46, 0);
@@ -810,7 +858,7 @@ p label {
 	
 }
 
-.article__label-single:hover{
+.article__label-single:hover, .article_label a:hover{
 	transition: 0.8s;
 	color:#fff;
 	background-color: rgb(41, 92, 0);
@@ -869,7 +917,6 @@ p label {
 .header_single_img {
 	display: block;
 	overflow: hidden;
-	max-width: 70%;
 	max-height: 550px;
 	
 }
@@ -878,7 +925,7 @@ p label {
 	max-width: 100%;
 	max-height: 100%;
 	object-fit: cover;
-	object-position: center;
+	object-position: 50% 50%;
 }
 
 .article__title {
@@ -948,7 +995,9 @@ border-radius: 3px;
 	.articles, .contacts, .content_blog,.header__single{
 		padding: 0 15px;
 	}
-	
+	.contacts{
+		justify-content: center;
+	}
 	
 }
 @media (max-width:920px){
@@ -981,7 +1030,9 @@ border-radius: 3px;
 
 	overflow: hidden;
 	}
-	
+	.contacts{
+		display: block;
+	}
 	
 }
 @media (max-width:768px){
