--- a/style.css
+++ b/style.css
@@ -488,14 +488,17 @@ overflow: hidden;
 	display: block;
 	margin: 0 0 15px 0;
 }
-.articles__link, .category_link, .article_category a {
+.articles__link{
+	display: inline;
+}
+.articles__link, .category_link, .article_category a ,.cat-item a{
 	color:#fff;
 }
 .articles__link:hover{
 	font-size: 102%;
 	transition: 0.5s;
 }
-.articles__buttons,.category_link , .article_category a{
+.articles__buttons,.category_link , .article_category a,.cat-item a{
 	display: inline-block;
 	padding: 5px 15px;
 	background:rgb(45, 97, 0);
@@ -504,7 +507,7 @@ overflow: hidden;
 	border-radius:3px;
 	margin: 15px 0 0 0;
 }
-.articles__buttons:hover,.category_link:hover, .article_category a:hover{
+.articles__buttons:hover,.category_link:hover, .article_category a:hover, .cat-item a:hover{
 	background:rgb(21, 46, 0);
 	transition: 0.8s;
 	/* background-color:#33640b; */
@@ -719,6 +722,9 @@ p label {
 	display: flex;
 	justify-content: start;
 }
+.header_blog-category{
+	display: block;
+}
 .header_blog_block{
 	position: relative;
 	
@@ -834,7 +840,7 @@ p label {
 
 
 .single__content{
-	font-size: calc(16px + 6 * (100vw / 1200));;
+	font-size: calc(16px + 6 * (100vw / 1200));
 
 	border: solid 2px red;
 	overflow: hidden;
@@ -847,6 +853,7 @@ p label {
 	margin-bottom: 8px;
 
 }
+
 
 .article_label a{
 	margin: 0 5px 0 0 ;
@@ -863,13 +870,13 @@ p label {
 	margin-right:0;
 
 }
-.article_label {
+.article_label , .tagcloud {
 	display: flex;
 	justify-content: start;
 	flex-wrap: wrap;
 	
 }
-.article__label-single , .article_label a {
+.article__label-single , .article_label a , .tagcloud a {
 	display: block;
 	margin: 0 2px;
 	color: rgb(21, 46, 0);
@@ -877,8 +884,27 @@ p label {
 	padding: 2px 7px;
 	
 }
-
-.article__label-single:hover, .article_label a:hover{
+.title__category{
+	display: flex;
+	justify-content: center;
+	margin: 2.5em 0 1em 0;
+	font-size: calc(24px + 16 * (100vw / 1200));
+	padding: 2%;
+}
+.title__category span{
+	text-align: center;
+}
+.widget_tag_cloud{
+	margin: 1em 0 0 0 ;
+}
+.widget_tag_cloud h2{
+	display: none;
+}
+.tagcloud a{
+	font-size: ;
+	
+}
+.article__label-single:hover, .article_label a:hover , .tagcloud a:hover{
 	transition: 0.8s;
 	color:#fff;
 	background-color: rgb(41, 92, 0);
@@ -894,20 +920,25 @@ p label {
    margin-bottom: 15px;
 
 }
-.aside__title {
-	text-align:center;
-	margin: 12px auto ;
+.widget{
 
 }
-.aside__title h2{
+.aside__title, .widgettitle {
+	text-align:center;
+	margin: 12px auto ;
 	font-size: 2em;
+
+}
+.aside__title h2 , .widgettitle h2{
+	/* font-size: 2em; */
 	/* font-weight: bold; */
 }
 .aside__list {
 	
 
 }
-.aside__list-link {
+.aside__list-link,
+.widget ul li a{
 	display: block;
 	transition: 0.5s;
 	/* margin: 1em 0 0 0 ; */
@@ -917,7 +948,8 @@ p label {
 	color: rgb(0, 0, 0);
 }
 
-.aside__list-link:hover{
+.aside__list-link:hover, 
+.widget ul li a:hover{
 	transition: 0.9s;
 	background-color: rgb(41, 92, 0);
 	color: #fff;
@@ -928,7 +960,7 @@ p label {
 	padding: 1em  ;
 }
 
-.aside__category, .aside__label{
+.aside__category, .aside__label, .cat-item {
 	margin:  0.7em;
 }
 .aside__label{
@@ -947,6 +979,41 @@ p label {
 	object-fit: cover;
 	object-position: 50% 50%;
 }
+.widget_categories h2{
+	display: none;
+
+}
+.widget_categories ul{
+	display: inline-flex;
+	flex-wrap: wrap;
+	padding: 0 5px;
+	
+
+}
+.widget_categories ul li{
+	margin: 0 6px;
+}
+.widget_categories ul li a{
+	color: #fff;
+	font-size: 16px;
+	max-width: 100%;
+	padding: 5px  8px;
+}
+.widget_categories ul li a:hover{
+	box-shadow: inset 0 -1px 1px rgba(0,0,0,0), inset 0 1px 2px rgba(0,0,0,0), inset 0 0 0 60px  rgb(65, 133, 39);
+	letter-spacing: 0px;
+	background-color:  rgb(65, 167, 70);
+	border-color:  rgb(65, 167, 70);
+	transform: scale(1.06);
+	transition: 0.5s;
+
+}
+.widget_categories ul li a:active {
+	padding: calc(.25em + 1px) .5em calc(.25em - 1px);
+	border-color: rgba(177,159,0,1);
+	box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
+ }
+
 
 .article__title {
 	font-size: 3em;
@@ -1067,7 +1134,9 @@ border-radius: 3px;
 		margin: 0 auto;
 		
 	}
-	
+	.title__category{
+		margin: 2em 0 0 0;
+	}
 }
 @media (max-width:768px){
 
