--- a/style.css
+++ b/style.css
@@ -61,14 +61,36 @@ h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;}
 	z-index: 2;
 	display: flex;
 	margin-left: 20px;
-
+	
+}
+.search form div {
+	display: flex;
+	height: 100%;
+	padding: 4px 0 2px 0 ;
+} 
+.search form div input:nth-child(2){
+	border-radius:  4px 0 0 4px ;
+	padding-left: 7px;
+}
+.search form div input:nth-child(3)  {
+	color: rgb(255, 255, 255);
+	font-weight: bolder;
+	height: 100%;
+	border-radius: 0 4px  4px 0;
+	background-color: rgb(15, 78, 7);
+	padding: 0 8px 0 8px;
+}
+.search form div input:nth-child(3):hover{
+	cursor: pointer;
 }
 .search__input{
 	margin-left: 15px;
 	border-radius: 5px 0px 0px 5px;
 	padding: 0px 5px;
 }
-
+.screen-reader-text{
+	display: none;
+}
 .search__button{
 	overflow: hidden; 
 	display: block;
@@ -457,7 +479,7 @@ overflow: hidden;
 	padding-right: 50px;
 }
 .articles__element:nth-child(3) { 
-	order: 4 
+	order: 4 ;
 }
 .articles__img{
 	display: block;
@@ -588,7 +610,7 @@ overflow: hidden;
 	transform: scale(1.3); 
 }
 .contacts__form{
-	width: 50%;
+	max-width: 50%;
 	margin: 0 0 2em  0 ;
 	/* padding:43px 0 0 0; */
 
@@ -620,8 +642,8 @@ p label {
 .input__fname, .input__phone, .textarea__subject {
 	border:solid 3px rgb(187, 170, 170);
 	border-radius:5px;
-	font-size: 1.2em;
-	min-width: 100%;
+	font-size: 1em;
+	max-width: 100%;
 	resize: none;
 	padding: 5px;
 	
@@ -744,7 +766,7 @@ p label {
 	right:0;
 	z-index: 99;
 	max-height: 65%;
-	padding: 3%;
+	padding: 1%;
 	background-color: rgba(209, 249, 185, 0.8);
 }
  .header_blog_title {
@@ -1118,10 +1140,11 @@ border-radius: 3px;
 	}
 	.contacts{
 		display: block;
+		width: 100%;
 	}
 	.contacts__form{
 		padding: 5% ;
-		width: 100%;
+		max-width: 100%;
 		margin: 0 ;
 		
 	}
@@ -1312,7 +1335,7 @@ border-radius: 3px;
 	.header_blog_text {
 		max-width: 90%;
 		max-height: 45%;
-		padding: 3%;
+		padding: 1%;
 		
 	}
 
@@ -1353,15 +1376,22 @@ border-radius: 3px;
 	.footer__about {
 		border: none;
 	}
+	.contacts{
+		display: block;
+		max-width: 100%;
+		margin: 0;
+	}
 	.contacts__form{
-		padding: 3% ;
+		max-width: 100%;
+		margin: 0;
 		
-		margin: 0 auto;
-		
+	}
+	.contacts__form textarea, .contacts__form input, .contacts__tel{
+		max-width: 100%;
 	}
 	.header_blog_text {
 		max-width: 100%;
-		padding: 3%;
+		padding: 1%;
 		
 	}
 	.header__search a{
