--- a/assets/css/map-style.css
+++ b/assets/css/map-style.css
@@ -1,3 +1,7 @@
+/*
+	Theme Name: Ulei Viu
+*/
+
 @import url(href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
 /* Обнуление */
 *{
@@ -32,21 +36,61 @@ a:hover{text-decoration: none;}
 ul li{list-style: none;}
 img{vertical-align: top;}
 h1,h2,h3,h4,h5,h6{font-size:inherit;font-weight: 400;} 
+:focus::-webkit-input-placeholder {
+	color: transparent
+ }
+ 
+ :focus::-moz-placeholder {
+	color: transparent
+ }
+ 
+ :focus:-moz-placeholder {
+	color: transparent
+ }
+ 
+ :focus:-ms-input-placeholder {
+	color: transparent
+ }
 /*--------------------*/
 
-
+.log_in{
+	margin-top:28px;
+}
 .search {
 	position: relative;
 	z-index: 2;
 	display: flex;
 	margin-left: 20px;
-
+	
+}
+.search form div {
+	display: flex;
+	height: 100%;
+	padding: 4px 0 2px 0 ;
+} 
+.search form div input:nth-child(2){
+	border-radius:  4px 0 0 4px ;
+	padding-left: 7px;
+}
+.search form div input:nth-child(3)  {
+	color: rgb(255, 255, 255);
+	font-weight: bolder;
+	height: 100%;
+	border-radius: 0 4px  4px 0;
+	background-color: rgb(15, 78, 7);
+	padding: 0 8px 0 8px;
+}
+.search form div input:nth-child(3):hover{
+	cursor: pointer;
 }
 .search__input{
+	margin-left: 15px;
 	border-radius: 5px 0px 0px 5px;
 	padding: 0px 5px;
 }
-
+.screen-reader-text{
+	display: none;
+}
 .search__button{
 	overflow: hidden; 
 	display: block;
@@ -139,8 +183,6 @@ html,body{
 	align-items: center;
 
 }
-
-
 .fullscreen_one {
 	/* background-color: #7a956b; */
 	background: url("") center / cover no-repeat fixed;
@@ -148,7 +190,12 @@ html,body{
 
 }
 .space{
+	transition: 0.6s;
 	padding:20px 0px;
+}
+.space:hover{
+	transition: 0.8s;
+	transform: scale(1.2);
 }
 .fullscreen__body {
 	display: flex;
@@ -168,17 +215,20 @@ html,body{
 	padding:15px 5px;
 	color: #fff;
 	font-weight: 700;
-	font-size: 3em;
+	font-size: calc(24px + 36 * (100vw / 1200));
 	transition: 0.8s;
+
 }
 .fullscreen__link{
 	text-decoration: none;
+	overflow: hidden;
 }
 .fullscreen__title:hover{
 	transition: 1s;
 	background-color:rgba(62, 127, 6, 0.8);
 	border-radius: 15px;
-	font-size: 3.155em;
+	transform: rotate(-1deg);
+	
 }
 
 .fullscreen__title__button{
@@ -231,13 +281,14 @@ html,body{
 }
 
 .header__body {
+	max-width: 1200px;
 	position: relative;
 	display: flex;
-	justify-content:space-between;
+	justify-content: space-between;
 	height: 45px;
 	align-items: center;
 	padding: 0px 10px;
-	
+	margin: 0 auto;
 	
 }
 .header__logo {
@@ -259,10 +310,9 @@ html,body{
 
 
 .header__list {
-	
-	display: block;
+	display: flex;
 	position: relative;
-	
+	z-index: 2;
 }
 .header__list li{
 	list-style: none;
@@ -278,7 +328,7 @@ html,body{
 	transition: 0.5s;
 }
 
-.header__link:hover, {
+.header__link:hover {
 	
 	background:rgb(45, 97, 0);
 	-webkit-transform: scale(1.1);
@@ -319,37 +369,52 @@ html,body{
 	color: white;
 	background:rgb(45, 97, 0);
 }
-.seed__one, .seed__one img, .seed__one span {
+.seed__one img, .seed__one span {
 	display: block;
 	text-align: center;
 	max-width: 300px;
 	
 
 }
+.seed__one{
+	max-width: 300px;
+	min-height: 280px;
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	padding: 0 0 15px 0;
+}
 .seed__one img{
 	border-radius:5px;
-
+	max-width: 300px;
+	
 }
 .seed__one span{
 	font-weight: 700;
 	font-size: 1.3em;
-	margin: 15px 0px 60px 0px;
-	max-width: 300px;
+	/* margin: 15px 0 0  0 ; */
 	
 }
 
 .seed__link{
 	color: black;
+	display: block;
+	margin: 15px 0 ;
 }
 .wrapper__seed__img{
-
+max-width: 320px;
+max-height: 245px;
 overflow: hidden;
 
 }
-.seed__img{
+.seed__img, .wrapper__seed__img img{
 	transition: 0.9s;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+	object-position: center;
 }
-.seed__img:hover{
+.seed__img:hover, .wrapper__seed__img img:hover{
 	transition: 0.9s;
 	-webkit-transform: scale(1.1);
 	transform: scale(1.1);
@@ -382,7 +447,21 @@ overflow: hidden;
 	margin:50px auto;
 	
 }
+.wrapper__articles__img{
+	display: block;
+	max-width: 100%;
 
+	overflow: hidden;
+}
+.wrapper__articles__img img{
+		border-radius: 20px;
+		display: block;
+		width: 100%;
+		margin: 10px 0px 0px 0px;
+		object-fit: cover;
+		
+	
+}
 
 .articles__element{
 	display: block;
@@ -400,14 +479,13 @@ overflow: hidden;
 	padding-right: 50px;
 }
 .articles__element:nth-child(3) { 
-	order: 4 
+	order: 4 ;
 }
-
 .articles__img{
 	display: block;
-	max-width: 100%;
-	
+	width: 100%;
 	margin: 10px 0px 0px 0px;
+	object-fit: cover;
 	
 }
 .articles__small{
@@ -417,23 +495,33 @@ overflow: hidden;
 	padding: 0 0px;
 	font-size: 1.2em;
 }
+
 .articles__title{
+	transition: 0.4s;
 	font-weight: 700;
 	font-size: 1.5em;
 	color: black;
+}
+.articles__title:hover{
+	transition: 0.6s;
+	color: rgba(62, 127, 6, 0.8);
 }
 .articles__text{
 	display: block;
 	margin: 0 0 15px 0;
 }
-.articles__link {
+.articles__link{
+	display: inline;
+}
+.articles__link, .category_link, .article_category a ,.cat-item a{
 	color:#fff;
 }
 .articles__link:hover{
 	font-size: 102%;
 	transition: 0.5s;
 }
-.articles__buttons{
+.articles__buttons,.category_link , .article_category a,.cat-item a{
+	display: inline-block;
 	padding: 5px 15px;
 	background:rgb(45, 97, 0);
 
@@ -441,11 +529,11 @@ overflow: hidden;
 	border-radius:3px;
 	margin: 15px 0 0 0;
 }
-.articles__buttons:hover{
+.articles__buttons:hover,.category_link:hover, .article_category a:hover, .cat-item a:hover{
 	background:rgb(21, 46, 0);
 	transition: 0.8s;
 	/* background-color:#33640b; */
-	width: 220px;
+	/* width: 235px; */
 	letter-spacing: 2px;
 }
 .green__line{
@@ -461,8 +549,11 @@ overflow: hidden;
 	margin: 0 auto;
 	
 }
+.wrraper__contacts-contact{
+	margin: 4em auto;
+}
 .contacts{
-	padding: 55px 0;
+	padding: 55px 25px ;
 	font-weight: 700;
 	display: flex;
 	flex-wrap: wrap;
@@ -471,7 +562,12 @@ overflow: hidden;
 	margin: 0 auto;
 	justify-content: space-between;
 }
-
+.social img{
+	padding: 0 20px 20px 0;
+}
+.social span:last-child{
+	padding: 0;
+}
 .contacts__title,.social__title{
 	font-weight: 700;
 	padding: 40px 0 40px 0;
@@ -483,7 +579,7 @@ overflow: hidden;
 
 .contacts__tel{
 	max-width: 45%;
-	margin: 0 0.5em 0 0.5em ;
+	margin: 0 0.5em 0 0 ;
 	font-size: 2em;
 	display: flex;
 	flex-direction: column;
@@ -500,25 +596,33 @@ overflow: hidden;
 	border-radius:5px;
 	font-size: 105%;
 }
-.facebook{
+.facebook, .telegram{
 	/* text-replace: 0.8s; */
-	padding: 0 60px 0 0;
+	
 }
 
-.facebook  img, .telegram img{
+.facebook  img, .telegram img, .instagram img{
 	transition: 0.8s;
-
+	width: 110px;
 }
-.facebook img:hover, .telegram img:hover {
+.facebook img:hover, .telegram img:hover, .instagram img:hover {
 	transition: 0.8s;
 	transform: scale(1.3); 
 }
 .contacts__form{
-	width: 45%;
+	max-width: 50%;
 	margin: 0 0 2em  0 ;
 	/* padding:43px 0 0 0; */
-	
 
+
+}
+.obligatory__info {
+	color: red;
+}
+p label {
+	display: inline-block;
+	/* color: red; */
+	/* margin: px 0; */
 }
 .contacts__form form, .feed__form form{
 	min-width: 100%;
@@ -526,21 +630,20 @@ overflow: hidden;
 	flex-direction: column;
 	
 }
-.contacts__form label, .feed__form label {
+.contacts__form label, .feed__form label{
 	padding: 15px 0;
 	font-size: 1.5em;
 }
 .contacts__form__title{
 	font-size: 2em;
 	font-weight: 700;
-	
 }
 
 .input__fname, .input__phone, .textarea__subject {
 	border:solid 3px rgb(187, 170, 170);
 	border-radius:5px;
-	font-size: 1.2em;
-	min-width: 100%;
+	font-size: 1em;
+	max-width: 100%;
 	resize: none;
 	padding: 5px;
 	
@@ -549,6 +652,9 @@ overflow: hidden;
 } */
 .textarea__subject {
 	height: 200px;
+}
+.accept__info{
+	margin: 10px 0 0 0 ;
 }
 .input__submit{
 	transition: 0.5s;
@@ -600,8 +706,24 @@ overflow: hidden;
 	font-size: 1.4em;
 	margin: 0 0 20px 0;
 }
+.footer__seeds__title-link,
+.footer__articles__title-link{
+	display: block;
+	transition: 0.6s;
+	color: rgb(255, 255, 255);
+	padding: 5px 10px;
+	border-radius: 3px;
+	border-bottom: 1px solid rgb(255, 255, 255);
+}
+.footer__seeds__title-link:hover,
+.footer__articles__title-link:hover{
+	transition: 0.8s;
+	background-color: rgb(255, 255, 255);
+	color: #1B3307 ;
+}
 .footer__seeds, .footer__articles, .footer__about  {
 	margin: 0 15px ;
+	text-align: center;
 }
 /* .footer__seeds__title {
 }
@@ -609,9 +731,378 @@ overflow: hidden;
 /* .footer__about__title {
 } */
 
+
+					/* ---------------Стили для блога-------------------------- */
+.wrapper__header__blog{
+	width: 100%;
+	background-color: red;
+}
+
+.header_blog {
+	margin:2.5em auto 0;
+	max-width: 1200px;
+	display: flex;
+	justify-content: start;
+}
+.header_blog-category{
+	display: block;
+}
+.header_blog_block{
+	position: relative;
+	
+
+	width: 100%;
+	padding: 0;
+	
+}
+.header_blog_img, .header_blog_block img{
+	display: block;
+	max-width: 100%;
+}
+.header_blog_text {
+	position: absolute;
+	max-width: 70%;
+	bottom:0;
+	right:0;
+	z-index: 99;
+	max-height: 65%;
+	padding: 1%;
+	background-color: rgba(209, 249, 185, 0.8);
+}
+ .header_blog_title {
+	
+	font-size: calc(20px + 16 * (100vw / 1200));
+	font-weight: 700;
+}
+.header__blog__link{
+	display: block;
+	transition: 0.5s;
+	color:rgb(0, 0, 0);
+	
+}
+.header__blog__link:hover{
+	transition: 0.7s;
+	transform: scale(1.1);
+	color: rgb(0, 46, 6);
+	
+}
+.wrapper_content_blog {
+	max-width: 1200px;
+	margin: 0 auto 2em;
+}
+.content_blog {
+		display: flex;
+		max-width: 100%;
+		
+	
+}
+.article__list {
+	max-width: 70%;
+	margin: 5em 1.5em 1em 0;
+
+}
+.article:last-child {
+	margin-bottom: 0;
+}
+
+.article {
+	margin : 0 0 3em 0;
+	display: flex;
+	
+}	
+.article div:nth-child(1){
+	min-width: 35%;
+}
+.img__prev{
+	overflow: hidden;
+	position: relative;
+	max-height: 300px;
+}
+.img__prev img , .img__prev-link img {
+	max-width: 120%;
+	transition: 1s;
+	object-fit: cover;
+	object-position: 50% 50%;
+	border-radius: 4px;
+
+	
+}
+.img__prev img:hover, .img__prev-link img:hover{
+	transition: 1s;
+	-webkit-transform: scale(1.1);
+	transform: scale(1.1);
+	opacity: 0.95;
+	cursor: pointer;
+}
+.article_text {
+	display: flex;
+	flex-direction: column;
+	justify-content: center ; 
+	padding: 0 0 0 1em;
+}
+.article_text-single{
+
+}
+.article_title {
+	transition: 0.5s;
+	color: #000;
+	margin: 0 0 0.2em 0 ;
+	font-weight: 700;
+	font-size: 1.7em;
+}
+.article_title:hover{
+	transition: 0.7s;
+	color: #33640b;
+}
+.article_prev {
+	margin-bottom: 15px;
+	
+}
+
+
+.single__content{
+	font-size: calc(16px + 6 * (100vw / 1200));
+	overflow: hidden;
+}
+
+.single__content p, .single__content ul {
+	margin-bottom: 15px;
+}
+.article_category,.article_label{
+	margin-bottom: 8px;
+
+}
+
+
+.article_label a{
+	margin: 0 5px 0 0 ;
+}
+.article_category ul {
+	display: flex;
+	flex-wrap: wrap;
+}
+.article_category ul li {
+	margin:0 5px 0 0;
+	
+}
+.article_category ul li:last-child {
+	margin-right:0;
+
+}
+.article_label , .tagcloud {
+	display: flex;
+	justify-content: start;
+	flex-wrap: wrap;
+	
+}
+.article__label-single , .article_label a , .tagcloud a {
+	display: block;
+	margin: 0 2px;
+	color: rgb(21, 46, 0);
+	font-weight: 700;
+	padding: 2px 7px;
+	
+}
+.title__category{
+	display: flex;
+	justify-content: center;
+	margin: 2.5em 0 1em 0;
+	font-size: calc(24px + 16 * (100vw / 1200));
+	padding: 2%;
+}
+.title__category span{
+	text-align: center;
+}
+.widget_tag_cloud{
+	margin: 1em 0 0 0 ;
+}
+.widget_tag_cloud h2{
+	display: none;
+}
+.tagcloud a{
+	font-size: ;
+	
+}
+.article__label-single:hover, .article_label a:hover , .tagcloud a:hover{
+	transition: 0.8s;
+	color:#fff;
+	background-color: rgb(41, 92, 0);
+	border-radius: 3px;
+}
+
+
+.aside__wrapper{
+	max-width: 45%;
+	background-color: rgb(165, 165, 165);
+	height: 100%;
+	padding: 15px 0;
+   margin-bottom: 15px;
+
+}
+.widget{
+
+}
+.aside__title, .widgettitle {
+	text-align:center;
+	margin: 12px auto ;
+	font-size: 2em;
+
+}
+.aside__title h2 , .widgettitle h2{
+	/* font-size: 2em; */
+	/* font-weight: bold; */
+}
+.aside__list {
+	
+
+}
+.aside__list-link,
+.widget ul li a{
+	display: block;
+	transition: 0.5s;
+	/* margin: 1em 0 0 0 ; */
+	border-top: 1px solid #000;
+	padding: 1em;
+	font-size: 1.3em;
+	color: rgb(0, 0, 0);
+}
+
+.aside__list-link:hover, 
+.widget ul li a:hover{
+	transition: 0.9s;
+	background-color: rgb(41, 92, 0);
+	color: #fff;
+	
+}
+.aside__list-link:last-child{
+	border-bottom: 1px solid #000;
+	padding: 1em  ;
+}
+
+.aside__category, .aside__label, .cat-item {
+	margin:  0.7em;
+}
+.aside__label{
+
+}
+.header_single_img {
+	display: block;
+	overflow: hidden;
+	max-height: 550px;
+	
+}
+.header_single_img img{
+	display: block;
+	max-width: 100%;
+	max-height: 100%;
+	object-fit: cover;
+	object-position: 50% 50%;
+}
+.widget_categories h2{
+	display: none;
+
+}
+.widget_categories ul{
+	display: inline-flex;
+	flex-wrap: wrap;
+	padding: 0 5px;
+	
+
+}
+.widget_categories ul li{
+	margin: 0 6px;
+}
+.widget_categories ul li a{
+	color: #fff;
+	font-size: 16px;
+	max-width: 100%;
+	padding: 5px  8px;
+}
+.widget_categories ul li a:hover{
+	box-shadow: inset 0 -1px 1px rgba(0,0,0,0), inset 0 1px 2px rgba(0,0,0,0), inset 0 0 0 60px  rgb(65, 133, 39);
+	letter-spacing: 0px;
+	background-color:  rgb(65, 167, 70);
+	border-color:  rgb(65, 167, 70);
+	transform: scale(1.06);
+	transition: 0.5s;
+
+}
+.widget_categories ul li a:active {
+	padding: calc(.25em + 1px) .5em calc(.25em - 1px);
+	border-color: rgba(177,159,0,1);
+	box-shadow: inset 0 -1px 1px rgba(0,0,0,.1), inset 0 1px 2px rgba(0,0,0,.3), inset 0 0 0 60px rgba(255,255,0,.45);
+ }
+
+
+.article__title {
+	font-size: 3em;
+	font-weight: 700;
+	text-align: center;
+	margin: 0 0 0.8em 0;
+}
+.article__paragraph {
+	margin: 0.65em 0 0 0 ;
+	font-size: 1.3em;
+}
+
+.aside__single{
+	background-color: #fff;
+}
+.pagination{
+	display: flex;
+	justify-content: center;
+	margin: 2em 0 ;
+}
+.pagination ul {
+	display: flex;
+	margin: 0 0 0 17px;
+	
+
+
+}
+.page-numbers {
+	display: inline-block;
+padding: 10px 12px;
+margin: 0 8px 6px 8px;
+color: #6E757C;
+background-color: #E6E8EB;
+-moz-border-radius: 3px;
+-webkit-border-radius: 3px;
+-khtml-border-radius: 3px;
+border-radius: 3px;
+}
+.page-numbers:hover{
+	background-color: #4c970f;
+	color: #fff;
+}
+.prev {
+}
+.inactive:hover {
+	cursor: default ;
+	background-color: #E6E8EB;
+	color: #6E757C;
+}
+.current {
+	background-color: #33640b;
+	color: #fff;
+}
+.current:hover {
+	cursor: default ;
+	background-color: #33640b;
+	color: #fff;
+}
+.next {
+}
+.feed__form{
+	margin: 2em 0 2em  0 ;
+}
+
 @media (max-width:1200px){
-	.articles{
+	.articles, .contacts, .content_blog,.header__single{
 		padding: 0 15px;
+	}
+	.contacts{
+		justify-content: center;
 	}
 	
 }
@@ -619,20 +1110,67 @@ overflow: hidden;
 	.header__link {
 		padding: 10px 5px;
 	}
+	.article{
+		display: block;
+		
+	}
 
+	.img__prev{
+		max-height: 230px;
+		margin-bottom: 1em;
+	}
+	.article_text{
+		padding:0;
+	}
+	.header_single_img{
+		max-width: 100%;
+		overflow: hidden;
+	}
+	.content_blog{
+		display: block;
+	}
+	.article__list, .aside__wrapper{
+		max-width: 100%;
+	}
+	.article__list{
+
+	overflow: hidden;
+	}
+	.contacts{
+		display: block;
+		width: 100%;
+	}
+	.contacts__form{
+		padding: 5% ;
+		max-width: 100%;
+		margin: 0 ;
+		
+	}
 	
+	.contacts__tel{
+		
+		padding: 5% ;
+		max-width: 100%;
+		margin: 0 auto;
+		
+	}
+	.title__category{
+		margin: 2em 0 0 0;
+	}
 }
 @media (max-width:768px){
 
 	body.lock{
 		overflow: hidden;
-		
 	}
 	.header__body {
 		height: 50px;
 	}
 	.header__logo {
 		flex: 0 0 40px;
+	}
+	.header_blog {
+		margin:3.1em auto 0;
 	}
 	.header__burger {
 		display: block;
@@ -692,8 +1230,7 @@ overflow: hidden;
 		position: fixed;
 		top: -100%;
 		left: 0;
-		width: 10%;
-		/*max-width: 1200px;*/
+		width: 100%;
 		height: 100%;
 		overflow: auto;
 		transition: all 0.3s ease 0s;
@@ -717,6 +1254,10 @@ overflow: hidden;
 		font-size: 24px;
 		
 	}
+	.header:before{
+		height: 50px;
+		
+	}
 
 	.content{
 		margin:-50px auto 0 ;
@@ -729,6 +1270,9 @@ overflow: hidden;
 	.seed__img{
 		width: 210px;
 		
+	}
+	.seed__one span{
+		max-width: 210px;
 	}
 	.articles{
 		flex-direction: column;
@@ -751,7 +1295,7 @@ overflow: hidden;
 		display: block;
 		margin: 10px 0;
 	}
-	.articles__img{
+	.wrapper__articles__img img{
 		border-radius:5px;
 		max-height: 150px;
 		object-fit: cover;
@@ -763,28 +1307,37 @@ overflow: hidden;
 		display: block;
 	}
 
-	.contacts__form{
-		padding: 5% ;
-		width: 100%;
-		margin: 0 ;
-		
-	}
-	.contacts__tel{
-		
-		padding: 5% ;
-		max-width: 100%;
-		margin: 0 auto;
-		
-	}
+
 	.contacts__title,.social__title{
 		font-weight: 700;
 		padding: 30px 0 30px 0;
 	}
-	.footer__wrapper{
-		/* justify-content: start; */
-		padding: 0 auto;
+	.content_blog{
+		display: block;
+	}
+	.header_single_img{
+		max-width: 100%;
 	}
 	
+	.article__list{
+		margin: 5em 0;
+	}
+	.wrapper_content_blog{
+		max-width: 100%;
+	}
+	.footer__wrapper{
+
+		padding: 0 auto;
+	}
+
+	.header_blog_text {
+		max-width: 90%;
+		max-height: 45%;
+		padding: 1%;
+		
+	}
+
+}
 @media (max-width:767px){
 	.content {
 		padding: 70px 0px 0px 0px;
@@ -803,6 +1356,9 @@ overflow: hidden;
 	.seed__img{
 		width: 350px;
 	}
+	.seed__one span{
+		max-width: 350px;
+	}
 	.footer__wrapper{
 		display: block;
 		
@@ -818,13 +1374,26 @@ overflow: hidden;
 	.footer__about {
 		border: none;
 	}
+	.contacts{
+		display: block;
+		max-width: 100%;
+		margin: 0;
+	}
 	.contacts__form{
-		padding: 3% ;
-		
-		margin: 0 auto;
+		max-width: 100%;
+		margin: 0;
 		
 	}
-	
+	.contacts__form textarea, .contacts__form input, .contacts__tel{
+		max-width: 100%;
+	}
+	.header_blog_text {
+		max-width: 100%;
+		padding: 1%;
+		
+	}
+	.header__search a{
+		display: none;
+	}
 }
 
-}
